# whistler

./: .gitignore  Dockerfile  README.md  antigravity.md  pyproject.toml  skaffold.yaml
.github/workflows/: deploy.yaml
charts/whistler/: Chart.yaml  values.dev.yaml  values.yaml
charts/whistler/crds/: crds.yaml
charts/whistler/templates/: configmap.yaml  crds.yaml  operator-deployment.yaml  priorityclass.yaml  rbac.yaml  server-deployment.yaml  server-service.yaml  templates.yaml  users-secret.yaml
manifests/: crds.yaml  sample-template.yaml
whistler/: config.py  operator.py  server.py  tui.py
